add loom in docker